tailorbird-task/force-app/main/default/objects/Employee__c/fields/Current_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Current_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Delivery Person</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>