tailorbird-task/force-app/main/default/objects/Employee__c/fields/Current_Job__c.field-meta.xml
<CustomField>
    <fullName>Current_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Job being executed by the delivery person</description>
    <label>Current Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>