tailorbird-task/force-app/main/default/objects/Employee__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available For Delivery</fullName>
                <default>true</default>
                <label>Available For Delivery</label>
            </value>
            <value>
                <fullName>Delivery In Progress</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>