tailorbird-task/force-app/main/default/objects/Employee__c/fields/Total_Wallet_balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Wallet_balance__c</fullName>
    <label>Total Wallet balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>