tailorbird-task/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Total_Wallet_balance__c</columns>
    <columns>Current_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>